--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.19.1",
     "@genkit-ai/googleai": "^1.10.0",
     "@genkit-ai/next": "^1.10.0",
     "@hookform/resolvers": "^4.1.3",
